--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^5.0.1",
     "react-loader-spinner": "^6.1.6",
     "react-modal": "^3.16.1",
+    "react-toast": "^1.0.3",
     "yup": "^1.3.3"
   },
   "devDependencies": {
